created drop zones and drag and drop events. Touch event not working

--- a/puzzle1.html
+++ b/puzzle1.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>Jigsaw Puzzle</title>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="interactive.js" defer> </script> <!--Specify defer or async?-->
     </head>
 
@@ -14,15 +15,15 @@
         </header>
         <main>
             <section>
-                <h1>Complete the Jigsaw!</h1>
-                <div id="containers">
-                    <div id = "piece-container"></div> <!--creating the puzzle piece -https://www.youtube.com/watch?app=desktop&v=b-WZjv5Xglc&ab_channel=PresentationProcess-->
-                    <div id = "puzzle-container"></div>
-                </div>
+                <h1>Puzzle 1</h1>
                 <ul id = "buttons">
                     <li><button id = "start">start</button></li>
                     <li><button id = "reset">reset</button></li>
                 </ul>
+                <div id="containers">
+                    <div id = "piece-container"></div> <!--creating the puzzle piece -https://www.youtube.com/watch?app=desktop&v=b-WZjv5Xglc&ab_channel=PresentationProcess-->
+                    <div id = "puzzle-container"></div>
+                </div>
             </section>
         </main>
       
