--- a/puzzle2.html
+++ b/puzzle2.html
@@ -6,6 +6,7 @@
         <title>Jigsaw Puzzle</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="interactive2.js" defer> </script> <!--Specify defer or async?-->
     </head>
 
     <body>
