--- a/puzzle1.html
+++ b/puzzle1.html
@@ -6,7 +6,7 @@
         <title>Jigsaw Puzzle</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="interactive1.js" defer> </script> <!--Specify defer or async?-->
+        <script src="interactive1.js" defer> </script>
     </head>
 
     <body>
