--- a/puzzle3.html
+++ b/puzzle3.html
@@ -6,6 +6,8 @@
         <title>Jigsaw Puzzle</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="interactive3.js" defer> </script>
+        
     </head>
 
     <body>
