added third puzzle, done css, still figuring out user correction

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <main>
             <section>
-                <h1>Pick a jigsaw to complete!</h1>
+                <h1>Pick a jigsaw to complete</h1>
                 <ul id = "buttons">
                     <li><a href="puzzle1.html" id="puzzle1" class="button">Puzzle 1 (Easy)</a></li>
                     <li><a href="puzzle2.html" id="puzzle2" class="button">Puzzle 2 (Medium)</a></li>
